# noirdesktop

./: .gitignore  CHANGELOG.md  CLAUDE.md  DESIGN.md  NOIR_DESKTOP_SPEC.md  QA_TRACKER.md  TEST_MTP_SYNC.md  TODOS.md  splash-preview.html
.claude/: launch.json  settings.local.json
.github/ISSUE_TEMPLATE/: beta-bug-report.md
.github/workflows/: feedback-agent.yml  sprint-plan.yml  sprint-synthesis.yml
docs/: BETA_KNOWN_ISSUES.md  BETA_LAUNCH_GUIDE.md  BETA_TESTERS_GUIDE.md  RELEASE_NOTES_v0.2.0-beta.1.md  SPEC-test-suite.md  index.html  noir-home-mockup.html  prompt-test-suite-noir.md
noir/: index.html  main.js  package-lock.json  package.json  renderer.js  styles.css
noir-tauri/: CLAUDE.md  DIAGNOSTIC_REPORT.md  PROTOCOLE_TEST_MVP.md  TESTS_2026-03-04.md  TESTS_AIRPLAY.md  jest.config.js  package-lock.json  package.json
noir-tauri/.claude/: launch.json  settings.json
noir-tauri/dashboard/: index.html
noir-tauri/docs/: NOIR_DESKTOP_SPEC.md  TEST-MTP-SPRINT2.md  TEST-MTP-SYNC.md  (+1 more)
noir-tauri/src-tauri/: Cargo.toml  tauri.conf.json
noir-tauri/src-tauri/capabilities/: default.json
noir-tauri/src-tauri/icons/: icon.icns
noir-tauri/src-tauri/src/: audio_decoder.rs  audio_engine.rs  eq.rs  lib.rs  logging.rs  main.rs  media_controls.rs  resampler.rs  sentry_init.rs
noir-tauri/src-tauri/src/audio/: backend.rs  coreaudio_backend.rs  coreaudio_stream.rs  error.rs  mod.rs  stream.rs  types.rs
noir-tauri/src-tauri/src/dap_sync/: db.rs  manifest.rs  mod.rs  mtp.rs  smb_utils.rs  sync_engine.rs  sync_plan.rs  volumes.rs  watcher.rs
noir-tauri/src-tauri/src/network/: credentials.rs  discovery.rs  mod.rs  scanner.rs  smb.rs  smb_utils.rs
noir-tauri/src-tauri/tests/: audio_decode.rs  audio_seek.rs  generate_fixtures.sh  library_scanner.rs  metadata.rs  network_source.rs  queue.rs  ring_buffer.rs  tauri_commands.rs
noir-tauri/src-tauri/tests/fixtures/: test_192000_24.flac  test_44100_16.aiff  test_44100_16.flac  test_96000_24.flac  test_alac.m4a  test_corrupted.flac  test_cover.flac  test_empty.flac  test_multidisc_d1t1.flac  test_multidisc_d1t2.flac  test_multidisc_d2t1.flac  test_no_tags.flac  test_notaudio.txt
research/: CLAUDE_Feature Analysis.md  Noir Desktop- Market Viability and Launch Risk Assessment for an Audiophile Music Player.md  compass_artifact_wf-c72e32b5-ee38-45e6-bec5-7ef9968eb9f5_text_markdown.md  pricing_gtm_analysis.md
(+58 files in other folders)
